--- a/index.html
+++ b/index.html
@@ -75,6 +75,22 @@
 <p align="text-gray size-mini">Zalalaa Committed to garment accessories lace design, production and sales. The main products are: water soluble (milk silk, polyester light, cotton embroidery fabric and lace), bead embroidery, towel embroidery, chiffon, lace, etc.Fashion and high quality lace make customers extraordinary.</p>
     <div class="grid big-grid-middle large-grid-large isplit-content">
     <div class="big-x12 grid discovers">
+      <a class="big-x3 flex flex-column" href="/q/24.html" title="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers,2024-07-01 17:53:32">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719827829205743.webp" alt="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers,2024-07-01 17:53:32" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+		<strong class="weight-small"><span class="text-danger">&#36;</span>:9.99</strong>
+        <p class="flex-grow">Embroidered lace three-dimensi···<br /><span class="text-main">Read More</span></p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/23.html" title="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend,2024-07-01 17:31:41">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719826678821251.webp" alt="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend,2024-07-01 17:31:41" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+		<strong class="weight-small"><span class="text-danger">&#36;</span>:29.99</strong>
+        <p class="flex-grow">New Embroidered Fabric Sticker···<br /><span class="text-main">Read More</span></p>
+      </a>
       <a class="big-x3 flex flex-column" href="/q/2.html" title="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers,2024-07-01 16:13:40">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719821466380643.webp" alt="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers,2024-07-01 16:13:40" class="img-auto scale" /></figure>
@@ -186,14 +202,6 @@
         </div>
 		<strong class="weight-small"><span class="text-danger">&#36;</span>:12</strong>
         <p class="flex-grow">Tiger head Embroiderye sticker<br /><span class="text-main">Read More</span></p>
-      </a>
-      <a class="big-x3 flex flex-column" href="/q/17.html" title="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.,2018-04-12 10:38:09">
-        <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719800181983602.webp" alt="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.,2018-04-12 10:38:09" class="img-auto scale" /></figure>
-          <div class="effect-content"><i class="icon-add text-main"></i></div>
-        </div>
-		<strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
-        <p class="flex-grow">Embroidered fabric featuring a···<br /><span class="text-main">Read More</span></p>
       </a>
     </div>
   </div>
