--- a/q/8.html
+++ b/q/8.html
@@ -180,6 +180,18 @@
       <div class="grid">
         <div class="small-x2">
           <div class="card">
+            <img loading="lazy" src="/q/upload/other/20240701/1719827829205743.webp" class="card-media card-overflow" />
+            <div class="card-body"><a class="button bg-main" href="/q/24.html" title="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers,2024-07-01 17:53:32">Read More</a></div>
+          </div>
+        </div>
+        <div class="small-x2">
+          <div class="card">
+            <img loading="lazy" src="/q/upload/other/20240701/1719826678821251.webp" class="card-media card-overflow" />
+            <div class="card-body"><a class="button bg-main" href="/q/23.html" title="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend,2024-07-01 17:31:41">Read More</a></div>
+          </div>
+        </div>
+        <div class="small-x2">
+          <div class="card">
             <img loading="lazy" src="/q/upload/other/20240701/1719821466380643.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/2.html" title="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers,2024-07-01 16:13:40">Read More</a></div>
           </div>
