--- a/q/flower/index.html
+++ b/q/flower/index.html
@@ -40,13 +40,29 @@
 <br />
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
     <div class="grid">
-       <div class="big-x2 small-x6"><a href="/q/animal/" title="Animal">Animal <span class="badge">2</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/" title="Flower">Flower <span class="badge">13</span></a></div> 
+       <div class="big-x2 small-x6"><a href="/q/animal/" title="Animal">Animal <span class="badge">2</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/" title="Flower">Flower <span class="badge">15</span></a></div> 
     </div>
 </div>
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
   <h3 class="margin-bottom-mini weight" align="center">Flower</h3>
   <div class="grid big-grid-middle large-grid-large isplit-content">
     <div class="big-x12 grid discovers">
+      <a class="big-x3 flex flex-column" href="/q/24.html" title="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers,2024-07-01 17:53:32">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719827829205743.webp"  alt="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:9.99</strong>
+        <p class="size-small flex-grow">Embroidered lace three-dimensional fabric with ethnic denim ··· <br />Read More</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/23.html" title="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend,2024-07-01 17:31:41">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719826678821251.webp"  alt="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:29.99</strong>
+        <p class="size-small flex-grow">New Embroidered Fabric Sticker Emblem Lace High end Exquisit··· <br />Read More</p>
+      </a>
       <a class="big-x3 flex flex-column" href="/q/2.html" title="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers,2024-07-01 16:13:40">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719821466380643.webp"  alt="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers" class="img-auto scale" /> </figure>
