--- a/q/article/index.html
+++ b/q/article/index.html
@@ -6,13 +6,12 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="renderer" content="webkit">
 <title>Blog-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
 <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
 <meta name="theme-color" content="#32CD32">
-<link rel="stylesheet" href="/q/p.min.css">
-<link rel="stylesheet" href="/q/p.css">
-<script src="/q/j.min.js"></script>
-<script src="/q/pj.min.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/p.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/p.css">
+<script src="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/j.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/pj.min.js"></script>
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
