--- a/q/11.html
+++ b/q/11.html
@@ -6,7 +6,6 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="renderer" content="webkit">
 <title>Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
 <meta name="description" content="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lacesize: 25cm * 12cmgum : None, sewing is requiredcolor : This white ，multi-coloredmaterail : polyester yarnworkmanship ：water-soluble embroidery">
 <meta name="theme-color" content="#32CD32">
 <meta property="og:type" content="product"/>
@@ -14,10 +13,10 @@
 <meta property="og:title" content="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace"/>
 <meta property="og:description" content="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lacesize: 25cm * 12cmgum : None, sewing is requiredcolor : This white ，multi-coloredmaterail : polyester yarnworkmanship ：water-soluble embroidery"/>
 <meta property="og:product:price" content="9.99"/>
-<link rel="stylesheet" href="/q/p.min.css">
-<link rel="stylesheet" href="/q/p.css">
-<script src="/q/j.min.js"></script>
-<script src="/q/pj.min.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/p.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/p.css">
+<script src="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/j.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/pj.min.js"></script>
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
@@ -73,30 +72,30 @@
 	<h3 class="margin-bottom weight" align="center">Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace<sup class="badge">$:9.99</sup></h3>
         <time>2024-06-10</time>
 		<p>Number: A11</p> 
-		<p><a class="padding block" href="https://www.paypal.com/ncp/payment/KED78AEWR8ZVA" target="_blank"> <img src="/q/py.webp" alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace" /> Buy Now <span class="text-danger">&#36;</span>:9.99</sup></a><img src="/q/a.webp" alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace"/></p>
+		<p><a class="padding block" href="https://www.paypal.com/ncp/payment/KED78AEWR8ZVA" target="_blank"> <img src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/py.webp" alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace" /> Buy Now <span class="text-danger">&#36;</span>:9.99</sup></a><img src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/a.webp" alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace"/></p>
   <p>Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace</p><p>size: 25cm * 12cm&nbsp;</p><p>gum : None, sewing is required&nbsp;</p><p>color : This white ，multi-colored</p><p>materail : polyester yarn</p><div>workmanship ：water-soluble embroidery</div><p><br/></p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240626/1719389747296309.webp">
+      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240626/1719389747296309.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719389747296309.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240626/1719389747296309.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow"></p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240630/1719759910175716.webp">
+      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240630/1719759910175716.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240630/1719759910175716.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240630/1719759910175716.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow"></p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240630/1719759913915347.webp">
+      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240630/1719759913915347.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240630/1719759913915347.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240630/1719759913915347.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow"></p>
@@ -110,31 +109,31 @@
       <div class="grid">
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="/q/upload/other/20240626/1719391194190860.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240626/1719391194190860.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/18.html" title="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="/q/upload/other/20240701/1719800457809732.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240701/1719800457809732.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/20.html" title="Skull cloth patch,2024-06-10 21:33:26">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="/q/upload/other/20240630/1719760090198490.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240630/1719760090198490.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/13.html" title="Embroidery flower bud lace flower applique,2024-06-10 21:33:15">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="/q/upload/other/20240701/1719800847146446.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240701/1719800847146446.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/11.html" title="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="/q/upload/other/20240701/1719800738209747.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240701/1719800738209747.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/22.html" title="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35">Read More</a></div>
           </div>
         </div>
