--- a/q/15.html
+++ b/q/15.html
@@ -6,7 +6,6 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="renderer" content="webkit">
 <title>Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
 <meta name="description" content="Embroidered water-soluble lace fabric, hand sewn cheongsam, heavy industry subsidy, ethnic peony flowers in stock supply.">
 <meta name="theme-color" content="#32CD32">
 <meta property="og:type" content="product"/>
@@ -14,10 +13,10 @@
 <meta property="og:title" content="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery"/>
 <meta property="og:description" content="Embroidered water-soluble lace fabric, hand sewn cheongsam, heavy industry subsidy, ethnic peony flowers in stock supply."/>
 <meta property="og:product:price" content="12.99"/>
-<link rel="stylesheet" href="/q/p.min.css">
-<link rel="stylesheet" href="/q/p.css">
-<script src="/q/j.min.js"></script>
-<script src="/q/pj.min.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/p.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/p.css">
+<script src="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/j.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/pj.min.js"></script>
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
@@ -73,79 +72,79 @@
 	<h3 class="margin-bottom weight" align="center">Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery<sup class="badge">$:12.99</sup></h3>
         <time>2024-06-30</time>
 		<p>Number: A15</p> 
-		<p><a class="padding block" href="" target="_blank"> <img src="/q/py.webp" alt="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery" /> Buy Now <span class="text-danger">&#36;</span>:12.99</sup></a><img src="/q/a.webp" alt="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery"/></p>
+		<p><a class="padding block" href="" target="_blank"> <img src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/py.webp" alt="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery" /> Buy Now <span class="text-danger">&#36;</span>:12.99</sup></a><img src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/a.webp" alt="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery"/></p>
   <p>Embroidered water-soluble lace fabric, hand sewn cheongsam, heavy industry subsidy, ethnic peony flowers in stock supply.</p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576419722657.webp">
+      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240628/1719576419722657.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576419722657.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240628/1719576419722657.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Embroidered</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576438728427.webp">
+      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240628/1719576438728427.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576438728427.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240628/1719576438728427.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A15-1</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576442207382.webp">
+      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240628/1719576442207382.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576442207382.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240628/1719576442207382.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A15-2</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576444923678.webp">
+      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240628/1719576444923678.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576444923678.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240628/1719576444923678.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A15-3</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576449511699.webp">
+      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240628/1719576449511699.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576449511699.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240628/1719576449511699.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A15-4</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576451445348.webp">
+      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240628/1719576451445348.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576451445348.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240628/1719576451445348.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A15-5</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576453759611.webp">
+      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240628/1719576453759611.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576453759611.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240628/1719576453759611.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A15-6</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576456229242.webp">
+      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240628/1719576456229242.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576456229242.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240628/1719576456229242.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A15-7</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576458303551.webp">
+      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240628/1719576458303551.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576458303551.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240628/1719576458303551.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A15-8</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576461501692.webp">
+      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240628/1719576461501692.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576461501692.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240628/1719576461501692.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A15-9</p>
@@ -159,13 +158,13 @@
       <div class="grid">
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="/q/upload/other/20240630/1719759794881169.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240630/1719759794881169.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/10.html" title="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2024-07-01 11:51:48">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="/q/upload/other/20240701/1719794420979065.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240701/1719794420979065.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/15.html" title="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2024-06-30 08:38:13">Read More</a></div>
           </div>
         </div>
