--- a/q/16.html
+++ b/q/16.html
@@ -6,7 +6,6 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="renderer" content="webkit">
 <title>Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
 <meta name="description" content="Embroidered lace cover, floral cloth patch, large peony embroidered water soluble set">
 <meta name="theme-color" content="#32CD32">
 <meta property="og:type" content="product"/>
@@ -14,10 +13,10 @@
 <meta property="og:title" content="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set"/>
 <meta property="og:description" content="Embroidered lace cover, floral cloth patch, large peony embroidered water soluble set"/>
 <meta property="og:product:price" content="12.99"/>
-<link rel="stylesheet" href="/q/p.min.css">
-<link rel="stylesheet" href="/q/p.css">
-<script src="/q/j.min.js"></script>
-<script src="/q/pj.min.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/p.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/p.css">
+<script src="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/j.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/pj.min.js"></script>
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
@@ -73,30 +72,30 @@
 	<h3 class="margin-bottom weight" align="center">Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set<sup class="badge">$:12.99</sup></h3>
         <time>2024-07-01</time>
 		<p>Number: A16</p> 
-		<p><a class="padding block" href="" target="_blank"> <img src="/q/py.webp" alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set" /> Buy Now <span class="text-danger">&#36;</span>:12.99</sup></a><img src="/q/a.webp" alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set"/></p>
+		<p><a class="padding block" href="" target="_blank"> <img src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/py.webp" alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set" /> Buy Now <span class="text-danger">&#36;</span>:12.99</sup></a><img src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/a.webp" alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set"/></p>
   <p>Embroidered lace cover, floral cloth patch, large peony embroidered water soluble set</p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576394952389.webp">
+      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240628/1719576394952389.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576394952389.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240628/1719576394952389.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow"></p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576394952389.webp">
+      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240628/1719576394952389.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576394952389.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240628/1719576394952389.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow"></p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576399734438.webp">
+      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240628/1719576399734438.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576399734438.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240628/1719576399734438.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow"></p>
@@ -110,7 +109,7 @@
       <div class="grid">
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="/q/upload/other/20240701/1719794556332881.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240701/1719794556332881.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/16.html" title="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2024-07-01 08:43:13">Read More</a></div>
           </div>
         </div>
