--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
 <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
 <meta name="theme-color" content="#32CD32">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/p.min.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/p.css">
-<script src="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/j.min.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/pj.min.js"></script>
+<link rel="stylesheet" href="/q/p.min.css">
+<link rel="stylesheet" href="/q/p.css">
+<script src="/q/j.min.js"></script>
+<script src="/q/pj.min.js"></script>
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
@@ -42,16 +42,16 @@
   <div class="flip-body">
     <a class="flip-item align-center" href="https://zalalaa.com">
       <picture>
-        <source media="(max-width: 1279px)" srcset="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/b1ss.webp">
-        <source media="(min-width: 1280px)" srcset="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/b1.webp">
-        <img src="https://raw.githubusercontent.com/sbqwg/zalalaa/masterhttps://raw.githubusercontent.com/sbqwg/zalalaa/master/q/b1.webp" class="img-auto" alt="zalalaa" />
+        <source media="(max-width: 1279px)" srcset="/q/b1ss.webp">
+        <source media="(min-width: 1280px)" srcset="/q/b1.webp">
+        <img src="/q/b1.webp" class="img-auto" alt="zalalaa" />
       </picture>
     </a>
 	    <a class="flip-item align-center" href="https://zalalaa.com">
       <picture>
-        <source media="(max-width: 1279px)" srcset="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/b2ss.webp">
-        <source media="(min-width: 1280px)" srcset="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/b2.webp">
-        <img src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/b2.webp" class="img-auto" alt="zalalaa" />
+        <source media="(max-width: 1279px)" srcset="/q/b2ss.webp">
+        <source media="(min-width: 1280px)" srcset="/q/b2.webp">
+        <img src="/q/b2.webp" class="img-auto" alt="zalalaa" />
       </picture>
     </a>
   </div>
@@ -77,7 +77,7 @@
     <div class="big-x12 grid discovers">
       <a class="big-x3 flex flex-column" href="/q/24.html" title="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers,2024-07-01 17:53:32">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240701/1719827829205743.webp" alt="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers,2024-07-01 17:53:32" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719827829205743.webp" alt="Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers,2024-07-01 17:53:32" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
 		<strong class="weight-small"><span class="text-danger">&#36;</span>:9.99</strong>
@@ -85,7 +85,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/23.html" title="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend,2024-07-01 17:31:41">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240701/1719826678821251.webp" alt="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend,2024-07-01 17:31:41" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719826678821251.webp" alt="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend,2024-07-01 17:31:41" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
 		<strong class="weight-small"><span class="text-danger">&#36;</span>:29.99</strong>
@@ -93,7 +93,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/2.html" title="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers,2024-07-01 16:13:40">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240701/1719821466380643.webp" alt="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers,2024-07-01 16:13:40" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719821466380643.webp" alt="Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers,2024-07-01 16:13:40" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
 		<strong class="weight-small"><span class="text-danger">&#36;</span>:9.99</strong>
@@ -101,7 +101,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/8.html" title="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers,2024-07-01 15:18:27">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240701/1719819186655198.webp" alt="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers,2024-07-01 15:18:27" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719819186655198.webp" alt="Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers,2024-07-01 15:18:27" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
 		<strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
@@ -109,7 +109,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/9.html" title="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product,2024-07-01 15:16:23">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240630/1719759342917874.webp" alt="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product,2024-07-01 15:16:23" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240630/1719759342917874.webp" alt="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product,2024-07-01 15:16:23" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
 		<strong class="weight-small"><span class="text-danger">&#36;</span>:9.99</strong>
@@ -117,7 +117,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/4.html" title="Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers,2024-07-01 15:16:13">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240701/1719806402155946.webp" alt="Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers,2024-07-01 15:16:13" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719806402155946.webp" alt="Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers,2024-07-01 15:16:13" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
 		<strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
@@ -125,7 +125,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/10.html" title="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2024-07-01 11:51:48">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240630/1719759794881169.webp" alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2024-07-01 11:51:48" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240630/1719759794881169.webp" alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2024-07-01 11:51:48" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
 		<strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
@@ -133,7 +133,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/14.html" title="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder,2024-07-01 11:47:46">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240701/1719805636338260.webp" alt="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder,2024-07-01 11:47:46" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719805636338260.webp" alt="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder,2024-07-01 11:47:46" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
 		<strong class="weight-small"><span class="text-danger">&#36;</span>:29.99</strong>
@@ -141,7 +141,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/16.html" title="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2024-07-01 08:43:13">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240701/1719794556332881.webp" alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2024-07-01 08:43:13" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719794556332881.webp" alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2024-07-01 08:43:13" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
 		<strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
@@ -149,7 +149,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/15.html" title="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2024-06-30 08:38:13">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240701/1719794420979065.webp" alt="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2024-06-30 08:38:13" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719794420979065.webp" alt="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2024-06-30 08:38:13" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
 		<strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
@@ -157,7 +157,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/18.html" title="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240626/1719391194190860.webp" alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719391194190860.webp" alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
 		<strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
@@ -165,7 +165,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/20.html" title="Skull cloth patch,2024-06-10 21:33:26">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240701/1719800457809732.webp" alt="Skull cloth patch,2024-06-10 21:33:26" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719800457809732.webp" alt="Skull cloth patch,2024-06-10 21:33:26" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
 		<strong class="weight-small"><span class="text-danger">&#36;</span>:12</strong>
@@ -173,7 +173,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/13.html" title="Embroidery flower bud lace flower applique,2024-06-10 21:33:15">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240630/1719760090198490.webp" alt="Embroidery flower bud lace flower applique,2024-06-10 21:33:15" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240630/1719760090198490.webp" alt="Embroidery flower bud lace flower applique,2024-06-10 21:33:15" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
 		<strong class="weight-small"><span class="text-danger">&#36;</span>:13.99</strong>
@@ -181,7 +181,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/11.html" title="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240701/1719800847146446.webp" alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719800847146446.webp" alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
 		<strong class="weight-small"><span class="text-danger">&#36;</span>:9.99</strong>
@@ -189,7 +189,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/22.html" title="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240701/1719800738209747.webp" alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719800738209747.webp" alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
 		<strong class="weight-small"><span class="text-danger">&#36;</span>:12</strong>
@@ -197,7 +197,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/21.html" title="Tiger head Embroiderye sticker,2024-06-02 18:42:38">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240701/1719800607934008.webp" alt="Tiger head Embroiderye sticker,2024-06-02 18:42:38" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719800607934008.webp" alt="Tiger head Embroiderye sticker,2024-06-02 18:42:38" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
 		<strong class="weight-small"><span class="text-danger">&#36;</span>:12</strong>
