--- a/q/14.html
+++ b/q/14.html
@@ -13,10 +13,10 @@
 <meta property="og:title" content="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder"/>
 <meta property="og:description" content="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder"/>
 <meta property="og:product:price" content="29.99"/>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/p.min.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/p.css">
-<script src="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/j.min.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/pj.min.js"></script>
+<link rel="stylesheet" href="/q/p.min.css">
+<link rel="stylesheet" href="/q/p.css">
+<script src="/q/j.min.js"></script>
+<script src="/q/pj.min.js"></script>
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
@@ -72,44 +72,44 @@
 	<h3 class="margin-bottom weight" align="center">Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder<sup class="badge">$:29.99</sup></h3>
         <time>2024-07-01</time>
 		<p>Number: A14</p> 
-		<p><a class="padding block" href="" target="_blank"> <img src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/py.webp" alt="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder" /> Buy Now <span class="text-danger">&#36;</span>:29.99</sup></a><img src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/a.webp" alt="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder"/></p>
+		<p><a class="padding block" href="" target="_blank"> <img src="/q/py.webp" alt="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder" /> Buy Now <span class="text-danger">&#36;</span>:29.99</sup></a><img src="/q/a.webp" alt="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder"/></p>
   <p>Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder</p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240701/1719805685113949.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240701/1719805685113949.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240701/1719805685113949.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240701/1719805685113949.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Qipao Hanfu collar cloud shoulder</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/image/20240701/1719805749310038.jpg">
+      <a class="big-x6 flex flex-column" href="/q/upload/image/20240701/1719805749310038.jpg">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/image/20240701/1719805749310038.jpg" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20240701/1719805749310038.jpg" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Qipao Hanfu collar cloud shoulder</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/image/20240701/1719805749284150.jpg">
+      <a class="big-x6 flex flex-column" href="/q/upload/image/20240701/1719805749284150.jpg">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/image/20240701/1719805749284150.jpg" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20240701/1719805749284150.jpg" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Qipao Hanfu collar cloud shoulder</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/image/20240701/1719805749667374.jpg">
+      <a class="big-x6 flex flex-column" href="/q/upload/image/20240701/1719805749667374.jpg">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/image/20240701/1719805749667374.jpg" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20240701/1719805749667374.jpg" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Qipao Hanfu collar cloud shoulder</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/image/20240701/1719805749337888.jpg">
+      <a class="big-x6 flex flex-column" href="/q/upload/image/20240701/1719805749337888.jpg">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/image/20240701/1719805749337888.jpg" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20240701/1719805749337888.jpg" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Qipao Hanfu collar cloud shoulder</p>
@@ -123,7 +123,7 @@
       <div class="grid">
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240701/1719805636338260.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="/q/upload/other/20240701/1719805636338260.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/14.html" title="Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder,2024-07-01 11:47:46">Read More</a></div>
           </div>
         </div>
