--- a/q/17.html
+++ b/q/17.html
@@ -13,10 +13,10 @@
 <meta property="og:title" content="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery."/>
 <meta property="og:description" content="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.Pattern: Peony FlowerBackside Process：No adhesiveSize：35cmx15cm"/>
 <meta property="og:product:price" content="12.99"/>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/p.min.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/p.css">
-<script src="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/j.min.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/pj.min.js"></script>
+<link rel="stylesheet" href="/q/p.min.css">
+<link rel="stylesheet" href="/q/p.css">
+<script src="/q/j.min.js"></script>
+<script src="/q/pj.min.js"></script>
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
@@ -72,37 +72,37 @@
 	<h3 class="margin-bottom weight" align="center">Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.<sup class="badge">$:12.99</sup></h3>
         <time>2018-04-12</time>
 		<p>Number: A17</p> 
-		<p><a class="padding block" href="" target="_blank"> <img src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/py.webp" alt="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery." /> Buy Now <span class="text-danger">&#36;</span>:12.99</sup></a><img src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/a.webp" alt="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery."/></p>
+		<p><a class="padding block" href="" target="_blank"> <img src="/q/py.webp" alt="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery." /> Buy Now <span class="text-danger">&#36;</span>:12.99</sup></a><img src="/q/a.webp" alt="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery."/></p>
   <p>Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.</p><p><br/></p><p>Pattern: Peony Flower</p><p>Backside Process：No adhesive</p><p>Size：35cmx15cm<br/></p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240629/1719629797900540.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240629/1719629797900540.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240629/1719629797900540.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240629/1719629797900540.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Peony Flower</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240629/1719629855566906.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240629/1719629855566906.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240629/1719629855566906.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240629/1719629855566906.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Peony Flower</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240629/1719629855705374.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240629/1719629855705374.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240629/1719629855705374.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240629/1719629855705374.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow"></p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240629/1719629855864728.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240629/1719629855864728.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240629/1719629855864728.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240629/1719629855864728.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow"></p>
@@ -116,25 +116,25 @@
       <div class="grid">
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240630/1719759794881169.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="/q/upload/other/20240630/1719759794881169.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/10.html" title="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2024-07-01 11:51:48">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240701/1719794556332881.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="/q/upload/other/20240701/1719794556332881.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/16.html" title="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2024-07-01 08:43:13">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240701/1719794420979065.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="/q/upload/other/20240701/1719794420979065.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/15.html" title="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2024-06-30 08:38:13">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240701/1719800181983602.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="/q/upload/other/20240701/1719800181983602.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/17.html" title="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.,2018-04-12 10:38:09">Read More</a></div>
           </div>
         </div>
