--- a/q/22.html
+++ b/q/22.html
@@ -13,10 +13,10 @@
 <meta property="og:title" content="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set"/>
 <meta property="og:description" content="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set"/>
 <meta property="og:product:price" content="12"/>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/p.min.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/p.css">
-<script src="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/j.min.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/pj.min.js"></script>
+<link rel="stylesheet" href="/q/p.min.css">
+<link rel="stylesheet" href="/q/p.css">
+<script src="/q/j.min.js"></script>
+<script src="/q/pj.min.js"></script>
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
@@ -72,79 +72,79 @@
 	<h3 class="margin-bottom weight" align="center">Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set<sup class="badge">$:12</sup></h3>
         <time>2024-06-02</time>
 		<p>Number: A22</p> 
-		<p><a class="padding block" href="https://www.paypal.com/ncp/payment/MN4DKKMPP27A6" target="_blank"> <img src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/py.webp" alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set" /> Buy Now <span class="text-danger">&#36;</span>:12</sup></a><img src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/a.webp" alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set"/></p>
+		<p><a class="padding block" href="https://www.paypal.com/ncp/payment/MN4DKKMPP27A6" target="_blank"> <img src="/q/py.webp" alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set" /> Buy Now <span class="text-danger">&#36;</span>:12</sup></a><img src="/q/a.webp" alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set"/></p>
   <p>Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set</p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240626/1719390299785042.webp">
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240626/1719390299785042.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240626/1719390299785042.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719390299785042.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Plum Water Soluble</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/image/20201016/1602835286604845.jpg">
+      <a class="big-x6 flex flex-column" href="/q/upload/image/20201016/1602835286604845.jpg">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/image/20201016/1602835286604845.jpg" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201016/1602835286604845.jpg" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A22-2</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/image/20201016/1602835286258353.jpg">
+      <a class="big-x6 flex flex-column" href="/q/upload/image/20201016/1602835286258353.jpg">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/image/20201016/1602835286258353.jpg" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201016/1602835286258353.jpg" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">A22-3</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/image/20201016/1602835286161825.jpg">
+      <a class="big-x6 flex flex-column" href="/q/upload/image/20201016/1602835286161825.jpg">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/image/20201016/1602835286161825.jpg" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201016/1602835286161825.jpg" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">A22-4</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/image/20201016/1602835286958424.jpg">
+      <a class="big-x6 flex flex-column" href="/q/upload/image/20201016/1602835286958424.jpg">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/image/20201016/1602835286958424.jpg" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201016/1602835286958424.jpg" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">A22-5</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/image/20201016/1602835286322972.jpg">
+      <a class="big-x6 flex flex-column" href="/q/upload/image/20201016/1602835286322972.jpg">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/image/20201016/1602835286322972.jpg" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201016/1602835286322972.jpg" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">A22-6</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/image/20201016/1602835364808371.jpg">
+      <a class="big-x6 flex flex-column" href="/q/upload/image/20201016/1602835364808371.jpg">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/image/20201016/1602835364808371.jpg" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201016/1602835364808371.jpg" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A22-7</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/image/20201016/1602835364279941.jpg">
+      <a class="big-x6 flex flex-column" href="/q/upload/image/20201016/1602835364279941.jpg">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/image/20201016/1602835364279941.jpg" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201016/1602835364279941.jpg" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A22-8</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/image/20201016/1602835364677527.jpg">
+      <a class="big-x6 flex flex-column" href="/q/upload/image/20201016/1602835364677527.jpg">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/image/20201016/1602835364677527.jpg" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201016/1602835364677527.jpg" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A22-9</p>
       </a>
-      <a class="big-x6 flex flex-column" href="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/image/20201016/1602835379533190.jpg">
+      <a class="big-x6 flex flex-column" href="/q/upload/image/20201016/1602835379533190.jpg">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/image/20201016/1602835379533190.jpg" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201016/1602835379533190.jpg" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A22-1</p>
@@ -158,31 +158,31 @@
       <div class="grid">
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240626/1719391194190860.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="/q/upload/other/20240626/1719391194190860.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/18.html" title="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240701/1719800457809732.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="/q/upload/other/20240701/1719800457809732.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/20.html" title="Skull cloth patch,2024-06-10 21:33:26">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240630/1719760090198490.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="/q/upload/other/20240630/1719760090198490.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/13.html" title="Embroidery flower bud lace flower applique,2024-06-10 21:33:15">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240701/1719800847146446.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="/q/upload/other/20240701/1719800847146446.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/11.html" title="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240701/1719800738209747.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="/q/upload/other/20240701/1719800738209747.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/22.html" title="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35">Read More</a></div>
           </div>
         </div>
