--- a/q/animal/index.html
+++ b/q/animal/index.html
@@ -8,10 +8,10 @@
 <title>Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
 <meta name="description" content="Hand sewn embroidery, three-dimensional embroidery, animal cloth stickers, hand nailed flower embroidery badges, cheongsam animals">
 <meta name="theme-color" content="#32CD32">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/p.min.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/p.css">
-<script src="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/j.min.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/sbqwg/zalalaa/q/pj.min.js"></script>
+<link rel="stylesheet" href="/q/p.min.css">
+<link rel="stylesheet" href="/q/p.css">
+<script src="/q/j.min.js"></script>
+<script src="/q/pj.min.js"></script>
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
@@ -48,7 +48,7 @@
     <div class="big-x12 grid discovers">
       <a class="big-x3 flex flex-column" href="/q/20.html" title="Skull cloth patch,2024-06-10 21:33:26">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240701/1719800457809732.webp"  alt="Skull cloth patch" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719800457809732.webp"  alt="Skull cloth patch" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small"><span class="text-danger">&#36;</span>:12</strong>
@@ -56,7 +56,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/21.html" title="Tiger head Embroiderye sticker,2024-06-02 18:42:38">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="https://raw.githubusercontent.com/sbqwg/zalalaa/master/q/upload/other/20240701/1719800607934008.webp"  alt="Tiger head Embroiderye sticker" class="img-auto scale" /> </figure>
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719800607934008.webp"  alt="Tiger head Embroiderye sticker" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small"><span class="text-danger">&#36;</span>:12</strong>
